plugins {
    id 'application'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '3.5.16'
    id 'uk.gov.hmcts.java' version '0.12.70'
    id 'org.owasp.dependencycheck' version '12.2.0'
    id 'com.github.ben-manes.versions' version '0.51.0'
    id 'org.sonarqube' version '7.2.3.7755'
    id "io.freefair.lombok" version '9.2.0'
    id "info.solidsoft.pitest" version '1.15.0'
    id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
    id 'org.gradle.test-retry' version '1.6.5'
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    functionalTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    integrationTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }
}

processFunctionalTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

idea {
    module {
        testSources.from(
                project.sourceSets.integrationTest.java.srcDirs,
                project.sourceSets.functionalTest.java.srcDirs,
                project.sourceSets.smokeTest.java.srcDirs,
        )
        testResources.from(
                project.sourceSets.integrationTest.resources.srcDirs,
                project.sourceSets.functionalTest.resources.srcDirs,
                project.sourceSets.smokeTest.resources.srcDirs,
        )
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestImplementation.extendsFrom testImplementation
    functionalTestCompile.extendsFrom testCompile
    functionalTestRuntime.extendsFrom testRuntime
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '-parameters',
            '-Xlint:unchecked'
    ]
}

tasks.register('functional', Test) {
    description = 'Runs the functional tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
}

tasks.register('integration', Test) {
    description = 'Runs the integration tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()
    // set your environment variables here
    // environment("APPINSIGHTS_INSTRUMENTATIONKEY", "test-key")
}

tasks.register('smoke', Test) {
    description = 'Runs the smoke tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.smokeTest.output.classesDirs
    classpath = sourceSets.smokeTest.runtimeClasspath
}

tasks.register('fortifyScan', JavaExec) {
    description = 'Run fortify scan.'
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    testLogging {
        exceptionFormat = 'full'
    }
}

checkstyle {
    maxWarnings = 0
    toolVersion = '13.4.2'
    getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
    toolVersion = '7.25.0'
    ignoreFailures = true
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
    reportsDir = file("./reports/pmd")
    ruleSets = [
            'category/java/errorprone.xml',
            'category/java/bestpractices.xml'
    ]
}

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required.set(true)
        csv.required.set(false)
        xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
    }
}

sonarqube {
    properties {
        property "sonar.projectName", "Reform :: ia-timed-event-service"
        property "sonar.projectKey", "IATIMEDEVENTSERVICE"
        property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
        property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/timedevent/infrastructure/config/**"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    }
}

tasks.named('sonarqube') {
    dependsOn test, integration, jacocoTestReport
    group = "Verification"
}

pitest {
    junit5PluginVersion = '1.2.1'
    targetClasses = ['uk.gov.hmcts.reform.timedevent.*']
    excludedClasses = [
            'uk.gov.hmcts.reform.timedevent.infrastructure.config.*',
            'uk.gov.hmcts.reform.timedevent.Application'
    ]
    threads = 10
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    failWhenNoMutations = false
    verbose = true
    mutationThreshold = 55
}

tasks.named('pitest') {
    group = "Verification"
}

dependencyUpdates.resolutionStrategy {
    componentSelection { rules ->
        rules.all {
            def isNonStable = { String version ->
                ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea'].any { qualifier ->
                    version ==~ /(?i).*[.-]\$qualifier[.\\d-+]*/
                }
            }
            if (isNonStable(candidate.version) && !isNonStable(currentVersion)) {
                selection.reject('Release candidate')
            }
        }
    }
}

dependencyCheck {
    suppressionFile = 'config/owasp/suppressions.xml'
}

ext["tomcat.version"] = "10.1.56"

test {
    retry {
        maxRetries = 5
        failOnPassedAfterRetry = false
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.2'
        mavenBom 'com.fasterxml.jackson:jackson-bom:2.21.4'

        // CVE-2026-34478
        // CVE-2026-34479
        // CVE-2026-34480
        // CVE-2026-34481
        // CVE-2026-34477
        // CVE-2025-68161
        // CVE-2026-41417
        // CVE-2025-55163
        // CVE-2025-58056
        // CVE-2025-58057
        // CVE-2026-33870
        // CVE-2026-33871
        // CVE-2025-67735 - from spring-boot-starter-data-redis@3.5.14
        mavenBom "io.netty:netty-bom:4.2.17.Final"
    }

    dependencies {
        dependencySet(group: 'org.junit.jupiter', version: '5.14.4') {
            entry 'junit-jupiter'
            entry 'junit-jupiter-api'
            entry 'junit-jupiter-engine'
            entry 'junit-jupiter-params'
        }

        dependencySet(group: 'org.junit.platform', version: '1.14.4') {
            entry 'junit-platform-commons'
            entry 'junit-platform-engine'
            entry 'junit-platform-launcher'
        }

        dependency group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'

        dependencySet(group: 'org.mockito', version: '5.23.0') {
            entry 'mockito-core'
            entry 'mockito-junit-jupiter'
        }

        // due to Serenity 5.3.10 forcing commons-lang3@3.18.0
        dependency group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

        // CVE-2026-34478
        // CVE-2026-34479
        // CVE-2026-34480
        // CVE-2026-34481
        // CVE-2026-34477
        // CVE-2025-68161 - from spring-boot-starter-logging@3.5.14
        dependencySet(group: 'org.apache.logging.log4j', version: '2.25.4') {
            entry 'log4j-to-slf4j'
            entry 'log4j-api'
        }

        // CVE-2020-13956 - transitive from service-auth-provider-java-client@5.3.3
        dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'

    implementation 'com.fasterxml.jackson.core:jackson-databind'

    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'

    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.13'

    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.17'

    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'

    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'

    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'
    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.5'

    implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation 'org.springframework.security:spring-security-test'

    testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'

    testImplementation group: 'com.h2database', name: 'h2', version: '2.4.240'

    testImplementation group: 'org.pitest', name: 'pitest', version: '1.15.8'
    testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.15.0'

    testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '5.3.11'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '5.3.11'

    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
        exclude group: 'commons-io', module: 'commons-io'
        exclude group: 'org.apache.commons', module: 'commons-lang3'
    }

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath

}

test {
    useJUnitPlatform()
}

mainClassName = 'uk.gov.hmcts.reform.timedevent.Application'

bootJar {
    getArchiveFileName().set(provider {
        'ia-timed-event-service.jar'
    })

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
